// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator renders "Triangle Surface" with height and base inputs and "(H * B) / 2" formula 1`] = `
<div
  class="calculator"
>
  <h2
    class="calculator__text calculator__text_engraved"
  >
    TRIANGLE SURFACE
  </h2>
  <form>
    <div
      class="calculator__line calculator__line_input"
    >
      <label
        class="calculator__text calculator__text_engraved"
        for="height"
      >
        HEIGHT
      </label>
      <input
        autocomplete="off"
        class="calculator__input calculator__text"
        id="height"
        name="height"
        type="text"
        value=""
      />
    </div>
    <div
      class="calculator__line calculator__line_input"
    >
      <label
        class="calculator__text calculator__text_engraved"
        for="base"
      >
        BASE
      </label>
      <input
        autocomplete="off"
        class="calculator__input calculator__text"
        id="base"
        name="base"
        type="text"
        value=""
      />
    </div>
    <button
      style="display: none;"
      type="submit"
    />
  </form>
  <section
    class="calculator__info"
  >
    <div
      class="calculator__line"
    >
      <span
        class="calculator__text calculator__text_engraved"
      >
        FORMULA
      </span>
      <span
        class="calculator__text calculator__text_engraved calculator__text_input-aligned"
      >
        (H * B) / 2
      </span>
    </div>
    <div
      class="calculator__line"
    >
      <span
        class="calculator__text calculator__text_engraved"
      >
        RESULT
      </span>
      <span
        class="calculator__text calculator__text_input-aligned"
      />
    </div>
  </section>
</div>
`;

exports[`Calculator returns 25 on form submit with 5 and 10 as input values 1`] = `
<div
  class="calculator"
>
  <h2
    class="calculator__text calculator__text_engraved"
  >
    TRIANGLE SURFACE
  </h2>
  <form>
    <div
      class="calculator__line calculator__line_input"
    >
      <label
        class="calculator__text calculator__text_engraved"
        for="height"
      >
        HEIGHT
      </label>
      <input
        autocomplete="off"
        class="calculator__input calculator__text"
        id="height"
        name="height"
        type="text"
        value="5"
      />
    </div>
    <div
      class="calculator__line calculator__line_input"
    >
      <label
        class="calculator__text calculator__text_engraved"
        for="base"
      >
        BASE
      </label>
      <input
        autocomplete="off"
        class="calculator__input calculator__text"
        id="base"
        name="base"
        type="text"
        value="10"
      />
    </div>
    <button
      style="display: none;"
      type="submit"
    />
  </form>
  <section
    class="calculator__info"
  >
    <div
      class="calculator__line"
    >
      <span
        class="calculator__text calculator__text_engraved"
      >
        FORMULA
      </span>
      <span
        class="calculator__text calculator__text_engraved calculator__text_input-aligned"
      >
        (H * B) / 2
      </span>
    </div>
    <div
      class="calculator__line"
    >
      <span
        class="calculator__text calculator__text_engraved"
      >
        RESULT
      </span>
      <span
        class="calculator__text calculator__text_input-aligned calculator__text_processing"
      >
        PROCESSING...
      </span>
    </div>
  </section>
</div>
`;

exports[`Calculator returns 25 on form submit with 5 and 10 as input values 2`] = `
<div
  class="calculator"
>
  <h2
    class="calculator__text calculator__text_engraved"
  >
    TRIANGLE SURFACE
  </h2>
  <form>
    <div
      class="calculator__line calculator__line_input"
    >
      <label
        class="calculator__text calculator__text_engraved"
        for="height"
      >
        HEIGHT
      </label>
      <input
        autocomplete="off"
        class="calculator__input calculator__text"
        id="height"
        name="height"
        type="text"
        value="5"
      />
    </div>
    <div
      class="calculator__line calculator__line_input"
    >
      <label
        class="calculator__text calculator__text_engraved"
        for="base"
      >
        BASE
      </label>
      <input
        autocomplete="off"
        class="calculator__input calculator__text"
        id="base"
        name="base"
        type="text"
        value="10"
      />
    </div>
    <button
      style="display: none;"
      type="submit"
    />
  </form>
  <section
    class="calculator__info"
  >
    <div
      class="calculator__line"
    >
      <span
        class="calculator__text calculator__text_engraved"
      >
        FORMULA
      </span>
      <span
        class="calculator__text calculator__text_engraved calculator__text_input-aligned"
      >
        (H * B) / 2
      </span>
    </div>
    <div
      class="calculator__line"
    >
      <span
        class="calculator__text calculator__text_engraved"
      >
        RESULT
      </span>
      <span
        class="calculator__text calculator__text_input-aligned"
      >
        25
      </span>
    </div>
  </section>
</div>
`;

exports[`CalculatorForm renders height and base input fields 1`] = `
<form>
  <div
    class="calculator__line calculator__line_input"
  >
    <label
      class="calculator__text calculator__text_engraved"
      for="height"
    >
      HEIGHT
    </label>
    <input
      autocomplete="off"
      class="calculator__input calculator__text"
      id="height"
      name="height"
      type="text"
      value=""
    />
  </div>
  <div
    class="calculator__line calculator__line_input"
  >
    <label
      class="calculator__text calculator__text_engraved"
      for="base"
    >
      BASE
    </label>
    <input
      autocomplete="off"
      class="calculator__input calculator__text"
      id="base"
      name="base"
      type="text"
      value=""
    />
  </div>
  <button
    style="display: none;"
    type="submit"
  />
</form>
`;

exports[`CalculatorForm types 5 and 10 into height and base input fields 1`] = `
<form>
  <div
    class="calculator__line calculator__line_input"
  >
    <label
      class="calculator__text calculator__text_engraved"
      for="height"
    >
      HEIGHT
    </label>
    <input
      autocomplete="off"
      class="calculator__input calculator__text"
      id="height"
      name="height"
      type="text"
      value="5"
    />
  </div>
  <div
    class="calculator__line calculator__line_input"
  >
    <label
      class="calculator__text calculator__text_engraved"
      for="base"
    >
      BASE
    </label>
    <input
      autocomplete="off"
      class="calculator__input calculator__text"
      id="base"
      name="base"
      type="text"
      value="10"
    />
  </div>
  <button
    style="display: none;"
    type="submit"
  />
</form>
`;

exports[`CalculatorInfo renders (H * B) / 2 formula 1`] = `
<section
  class="calculator__info"
>
  <div
    class="calculator__line"
  >
    <span
      class="calculator__text calculator__text_engraved"
    >
      FORMULA
    </span>
    <span
      class="calculator__text calculator__text_engraved calculator__text_input-aligned"
    >
      (H * B) / 2
    </span>
  </div>
  <div
    class="calculator__line"
  >
    <span
      class="calculator__text calculator__text_engraved"
    >
      RESULT
    </span>
    <span
      class="calculator__text calculator__text_input-aligned"
    />
  </div>
</section>
`;

exports[`CalculatorInfo renders with error status 1`] = `
<section
  class="calculator__info"
>
  <div
    class="calculator__line"
  >
    <span
      class="calculator__text calculator__text_engraved"
    >
      FORMULA
    </span>
    <span
      class="calculator__text calculator__text_engraved calculator__text_input-aligned"
    />
  </div>
  <div
    class="calculator__line"
  >
    <span
      class="calculator__text calculator__text_engraved"
    >
      RESULT
    </span>
    <span
      class="calculator__text calculator__text_input-aligned calculator__text_error"
    >
      ERROR
    </span>
  </div>
</section>
`;

exports[`CalculatorInfo renders with fulfilled status 1`] = `
<section
  class="calculator__info"
>
  <div
    class="calculator__line"
  >
    <span
      class="calculator__text calculator__text_engraved"
    >
      FORMULA
    </span>
    <span
      class="calculator__text calculator__text_engraved calculator__text_input-aligned"
    />
  </div>
  <div
    class="calculator__line"
  >
    <span
      class="calculator__text calculator__text_engraved"
    >
      RESULT
    </span>
    <span
      class="calculator__text calculator__text_input-aligned"
    >
      25
    </span>
  </div>
</section>
`;

exports[`CalculatorInfo renders with processing status 1`] = `
<section
  class="calculator__info"
>
  <div
    class="calculator__line"
  >
    <span
      class="calculator__text calculator__text_engraved"
    >
      FORMULA
    </span>
    <span
      class="calculator__text calculator__text_engraved calculator__text_input-aligned"
    />
  </div>
  <div
    class="calculator__line"
  >
    <span
      class="calculator__text calculator__text_engraved"
    >
      RESULT
    </span>
    <span
      class="calculator__text calculator__text_input-aligned calculator__text_processing"
    >
      PROCESSING...
    </span>
  </div>
</section>
`;

exports[`CalculatorTitle renders "Triangle Surface" title 1`] = `
<h2
  class="calculator__text calculator__text_engraved"
>
  Triangle Surface
</h2>
`;
